<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.corebounce.nova</groupId>
    <artifactId>novacontrol</artifactId>
    <version>2.2.0-SNAPSHOT</version>

    <name>novacontrol</name>
    <url>https://github.com/arisona/nova</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <java.native>--enable-native-access=ALL-UNNAMED</java.native>
        <exec.mainClass>org.corebounce.nova.NovaControl</exec.mainClass>
    </properties>

    <dependencies>
        <!--
        <dependency>
            <groupId>com.slytechs.jnet.jnetpcap</groupId>
            <artifactId>jnetpcap-wrapper</artifactId>
            <version>2.1.1-SNAPSHOT</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240205</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>23</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*.*</artifact>
                            <excludes>
                            <exclude>META-INF/LICENSE.txt</exclude>
                            <exclude>META-INF/MANIFEST.MF</exclude>
                            <exclude>module-info.class</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer
                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>org.corebounce.nova.NovaControl</mainClass>
                        </transformer>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
